fixed contrast

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 body {
   height: 100vh;
   width: 100vw;
-  background-color: #3C474B;
+  background-color: #1f2736;
   font-family: 'Josefin Sans', sans-serif;
   letter-spacing: .6px;
   margin: 0 auto;
@@ -47,7 +47,7 @@ p {
   display: flex;
   justify-content: space-between;
 
-  background-color: #162521;
+  background-color: rgb(3, 0, 23);
 
   z-index: 1;
 }
@@ -106,7 +106,7 @@ p {
   justify-content: space-between;
 
   height: 110px;
-  background-color: #162521;
+  background-color: rgb(3, 0, 23);
 }
 
 .footerContact {
@@ -158,7 +158,7 @@ i {
 
 .heyThere {
   color: #c0e0de;
-  background-color: #162521;
+  background-color: rgb(3, 0, 23);
   padding: 1rem 2rem 2rem 2rem;
   width: 70%;
   border-radius: 7px;
@@ -196,7 +196,7 @@ i {
   border: 4px solid #9eefe5;
   border-radius: 50%;
   position: absolute;
-  background-color: black;
+  background-color: rgb(3, 0, 23);
   width: 275px;
 }
 
@@ -262,7 +262,7 @@ i {
 }
 
 .xpTechBlock {
-  background-color: #162521;
+  background-color: rgb(3, 0, 23);
   border-radius: 5px;
   width: 85px;
   height: 85px;
@@ -310,7 +310,7 @@ i {
 .tooltip .tipText {
   visibility: hidden;
   background-color: #c0e0deb1;
-  color: #162521;
+  color: rgb(3, 0, 23);
   text-align: center;
   padding: 5px;
   border-radius: 5px;
@@ -387,7 +387,7 @@ i {
 .projectLite {
   border: 4px solid #9eefe5;
   border-radius: 10px;
-  background-color: #162521;
+  background-color: rgb(3, 0, 23);
   cursor: pointer;
 
   display: flex;
@@ -431,7 +431,7 @@ i {
 .detailModal {
   margin: 0 auto;
   border-radius: 10px;
-  background-color: #162521;
+  background-color: rgb(3, 0, 23);
 
   height: 80vh;
   width: 80vw;
@@ -497,7 +497,7 @@ i {
 .projectLinks a {
   text-decoration: none;
   background-color: #9eefe5;
-  color: #162521;
+  color: rgb(3, 0, 23);
   padding: 1rem;
   width: 70px;
   text-align: center;
@@ -525,7 +525,7 @@ i {
   flex-direction: column;
 
   color: #c0e0de;
-  background-color: #162521;
+  background-color: rgb(3, 0, 23);
   border: 2px solid #9eefe5;
 
   padding: 3rem;
@@ -596,7 +596,7 @@ textarea {
   border: none;
 
   background-color: #9eefe5;
-  color: #162521;
+  color: rgb(3, 0, 23);
 }
 
 /* smaller screens */
@@ -619,7 +619,7 @@ textarea {
   .navBurger {
     display: inline;
     border: none;
-    background-color: #162521;
+    background-color: rgb(3, 0, 23);
   }
 
   .navLinks {
@@ -636,7 +636,7 @@ textarea {
     top: 90px;
     right: 0;
 
-    background-color: #162521;
+    background-color: rgb(3, 0, 23);
     border-left: 2px solid #4f7cac;
     border-bottom: 2px solid #4f7cac;
     border-radius: 5px;
@@ -730,7 +730,7 @@ textarea {
     left: 0;
     bottom: 0;
 
-    background-color: #162521;
+    background-color: rgb(3, 0, 23);
     border: none;
     border-radius: 0;
 
